binrw/tests/ui/invalid_keyword_unit_enum.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_tuple`, `repr`
 --> $DIR/invalid_keyword_unit_enum.rs:4:6
  |
4 | #[br(invalid_unit_enum_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^
